# sollongcode

./: .gitignore  Anchor.toml  DEVELOPING.md  README.md  shell.nix
migrations/: deploy.ts
programs/sollong-bank/: Cargo.toml
programs/sollong-bank/src/: errors.rs  instructions.rs  lib.rs  state.rs
programs/sollong-bank/src/instructions/: close_account.rs  create_financial_account.rs  create_user_account.rs  deposit.rs  init.rs  owner_withdraw.rs
programs/sollong-ido/: Cargo.toml
programs/sollong-ido/src/: lib.rs
programs/sollong-preipo/: Cargo.toml
programs/sollong-preipo/src/: errors.rs  instructions.rs  lib.rs  state.rs
programs/sollong-preipo/src/instructions/: buy.rs  close_account.rs  create_financial_account.rs  create_user_account.rs  init.rs  new_round.rs  owner.rs  owner_withdraw.rs  set_buy_share_limit.rs  set_time.rs  whitelist.rs  withdraw.rs
programs/sollong-presale/: Cargo.toml
programs/sollong-presale/src/: errors.rs  instructions.rs  lib.rs  state.rs
programs/sollong-presale/src/instructions/: change_ow.rs  close_account.rs  common.rs  deposit.rs  init.rs  init_user_data.rs  ow_withdraw.rs  set_deposit_limit.rs  set_time.rs  set_total_sale.rs
src/: abaci.sol  cat.sol  clip.sol  cure.sol  dog.sol  end.sol  flap.sol  flip.sol  flop.sol  join.sol  jug.sol  pot.sol  solg.sol  spot.sol  vat.sol  vow.sol
src/test/: abaci.t.sol  clip.t.sol  dog.t.sol  end.t.sol  flap.t.sol  flip.t.sol  flop.t.sol  jug.t.sol  pot.t.sol  solg.t.sol  vat.t.sol  vow.t.sol
